<resources>
    <string name="app_name">FindMe</string>

    <string name="welcome">Welcome to FindMe</string>

    <string name="buttonGo">GO</string>

    <string name="findMyFriendButtonText">I want to find my friend</string>
    <string name="findMyFriendDescription">Enter the code we sent to your friend</string>
    <string name="findMyFriendHint">1A2B3C4</string>

    <string name="friendFindMeButtonText">My friend wants to find me</string>
    <string name="friendFindMeDescription">Send this code to your friend</string>
    <string name="friendFindMePlaceholder">ABC1234</string>

    <string name="meetHalfwayButtonText">I want to meet halfway</string>
    <string name="meetHalfwayDescription">Are you sharing or receiving a code?</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_find__my__friend">Find You</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_friend__find__me">Find Me</string>
    <string name="title_activity_find__me__map">FindMe</string>
    <string name="title_activity_generate__or__receive">Meet Halfway</string>
</resources>
