<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".Home">

    <TextView
        android:id="@+id/welcomeToFindMeText"
        style="@style/header"
        android:textSize="25dp"
        android:text="@string/welcome" />

    <Button
        style="@style/button"
        android:text="@string/findMyFriendButtonText"
        android:onClick="findMyFriendActivity" />

    <Button
        style="@style/button"
        android:text="@string/friendFindMeButtonText"
        android:onClick="friendFindMeActivity" />

    <Button
        style="@style/button"
        android:text="@string/meetHalfwayButtonText"
        android:onClick="meetHalfwayActivity" />

</LinearLayout>
